# web-img-viewer

./: Cargo.toml  README.md  index.html
src/: color_management.rs  image_decode.rs  main.rs  render_pipeline.rs
styles/: milligram.css  styles.css
