[package]
name = "dioxus-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
# dioxus = { git="https://github.com/DioxusLabs/dioxus.git" }

#fermi = { git = "https://github.com/dioxuslabs/dioxus" }
img-render = { version = "0.1.0", path = "../img-render" }
winit = "0.27"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
futures = "0.3.24"
wasm-timer = "0.2.5"
js-sys = "0.3.59"
log = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "File",
    "FileList",
    "HtmlInputElement",
    "Blob",
    "ImageData","console",
    "Blob",
    "Url",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageBitmap",
    "HtmlImageElement",
    "HtmlAnchorElement"
]}