[package]
name = "dioxus-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
futures = "0.3.24"
wasm-timer = "0.2.5"
js-sys = "0.3.59"
log = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "DomRect",
    "File",
    "FileList",
    "HtmlInputElement",
    "Blob",
    "ImageData","console",
    "Url",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageBitmap",
    "HtmlImageElement",
    "HtmlAnchorElement"
]}

hex_color = "2.0.0"

# for render pipeline
wgpu = { version = "0.13", features = ["webgl"]}
pollster = "0.2"
winit = "0.27"

bytemuck = { version = "1.4", features = ["derive"] }